--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.0",
     "swiper": "^9.2.4"
   },
