--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.0",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
